--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developers-portfolio",
-  "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
+  "description": "A personal static website/portfolio template hosted with Vercel, built to showcase my recent projects.",
   "homepage": "http://192.168.100.115/",
   "version": "2.0.0",
   "dependencies": {
